Add recipe for berry peanut butter smoothie

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/buttery-spaghetti.html">Buttery Spaghetti</a>
+        <ul>
+            <li><a href="./recipes/buttery-spaghetti.html">Buttery Spaghetti</a></li>
+            <li><a href="./recipes/berry-peanut-butter-smoothie.html">Berry Peanut Butter Smoothie</a></li>
+        </ul>
         
     </body>
 </html>
