--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ul>
             <li><a href="./recipes/buttery-spaghetti.html">Buttery Spaghetti</a></li>
             <li><a href="./recipes/berry-peanut-butter-smoothie.html">Berry Peanut Butter Smoothie</a></li>
+            <li><a href="./recipes/chocolatey-oatmeal.html">Chocolatey Oatmeal</a></li>
         </ul>
-        
     </body>
 </html>
