Update berry-pbnj smoothie recipe

--- a/recipes/berry-peanut-butter-smoothie.html
+++ b/recipes/berry-peanut-butter-smoothie.html
@@ -15,20 +15,21 @@
         you the most delicious smoothie we have ever blended!</p>
         <h2>Ingredients</h2>
         <ul>
-            <li>4 frozen strawberries</li>
-            <li>8 frozen blueberries</li>
-            <li>1/2 frozen banana</li>
-            <li>5 frozen leaves of spinach</li>
-            <li>2 tbsp sugar</li>
-            <li>4 tbsp peanut butter</li>
+            <li>Strawberries    (<em>4 frozen</em>)</li>
+            <li>Blueberries     (<em>8 frozen</em>)</li>
+            <li>raspberries     (<em>4 frozen</em>)</li>
+            <li>Banana          (<em>1/2 frozen</em>)</li>
+            <li>Spinach         (<em>4 leaves</em>)</li>
+            <li>Sugar           (<em>2 tbsp</em>)</li>
+            <li>Peanut butter   (<em>4 tbsp</em>)</li>
         </ul>
         <h2>Steps</h2>
         <ol>
-            <li>Add frozen strawberries, blueberries, banana, and spinach to a blender</li>
-            <li>Sprinkle 2 tbsp sugar over the frozen fruits and veggie</li>
-            <li>Add 4 tbsp peanut butter to the blender</li>
+            <li>Add frozen strawberries, blueberries, raspberries, banana, and spinach to a blender</li>
+            <li>Sprinkle sugar over the frozen fruits and veggie</li>
+            <li>Add peanut butter to the blender</li>
             <li>Blend ingredients together to get desired consistency</li>
-            <li>Top with 3 blueberries</li>
+            <li>(<em>Optional</em>) Top with 3 blueberries</li>
         </ol>
     </body>
 </html>
