Fix typo and add cinnamon

--- a/recipes/chocolatey-oatmeal.html
+++ b/recipes/chocolatey-oatmeal.html
@@ -19,7 +19,7 @@
             <li>Milk                    (<em>2 cup</em>)</li>
             <li>Raisins                 (<em>10</em>)</li>
             <li>Peanut butter           (<em>2 tbsp</em>)</li>
-            <li>Cinnimon                (<em>2 tbsp</em>)</li>
+            <li>Cinnamon                (<em>2 tbsp</em>)</li>
             <li>Chocolate chips         (<em>1/4 cup</em>)</li>
             <li>Granola                 (<em>1/4 cup</em>)</li>
             <li>Maple syrup             (<em>3 tsp</em>)</li>
@@ -31,7 +31,7 @@
             <li>Add rolled oats, raisins, salt, and drizzle maple syrup to a medium bowl</li>
             <li>Microwave on high for 4 minutes</li>
             <li>Let sit for 1 minute</li>
-            <li>Add peanut butter, chocolate chips, granola</li>
+            <li>Add peanut butter, chocolate chips, granola, and sprinkle cinnamon</li>
             <li>In a separate cup, stir chocolate whey protein in 1 cup water</li>
             <li>Stir mixture into the bowl of oats and enjoy</li>
         </ol>
