Clean code in buttery spaghetti recipe

--- a/recipes/buttery-spaghetti.html
+++ b/recipes/buttery-spaghetti.html
@@ -15,20 +15,19 @@
         taste just as good!</p>
         <h2>Ingredients</h2>
         <ul>
-            <li>1 lb. spaghetti</li>
-            <li>15g salt</li>
-            <li>1 cup parmasian cheese</li>
-            <li>3 tbsp butter</li>
+            <li>Spaghetti           (<em>1 pound</em>)</li>
+            <li>Salt                (<em>15g</em>)</li>
+            <li>Parmasian cheese    (<em>1 cup</em>)</li>
+            <li>Butter              (<em>3 tbsp</em>)</li>
         </ul>
-
         <h2>Steps</h2>
         <ol>
-            <li>Add a half gallon water to a medium-sized pot, and bring to rolling boil</li>
-            <li>Add 15g salt to the boiling water</li>
-            <li>Add 1 lb. spaghetti to the boiling water</li>
+            <li>Add a half gallon water to a medium-sized pot, and bring to a rolling boil</li>
+            <li>Add salt to the boiling water</li>
+            <li>Add spaghetti to the boiling water</li>
             <li>Boil spaghetti for 8-12 minutes, stir periodically</li>
             <li>Drain water completely</li>
-            <li>Stir 3 tbsp butter into the spaghetti</li>
+            <li>Stir butter into the spaghetti</li>
             <li>Sprinkle parmasian cheese on top of the spaghetti</li>
         </ol>
     </body>
