--- a/recipes/chocolatey-oatmeal.html
+++ b/recipes/chocolatey-oatmeal.html
@@ -26,7 +26,7 @@
             <li>Salt                    (<em>1/4 tsp</em>)</li>
             <li>Chocolate whey protein  (<em>2 scoop</em>)</li>
         </ul>
-        <h2>Instructions</h2>
+        <h2>Steps</h2>
         <ol>
             <li>Add rolled oats, raisins, salt, and drizzle maple syrup to a medium bowl</li>
             <li>Microwave on high for 4 minutes</li>
