--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./styles.css">
         <meta charset="utf-8">
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="home-page">Odin Recipes</h1>
         <ul>
-            <li><a href="./recipes/buttery-spaghetti.html">Buttery Spaghetti</a></li>
-            <li><a href="./recipes/berry-peanut-butter-smoothie.html">Berry Peanut Butter Smoothie</a></li>
-            <li><a href="./recipes/chocolatey-oatmeal.html">Chocolatey Oatmeal</a></li>
+            <li><a class="spaghetti" href="./recipes/buttery-spaghetti.html">Buttery Spaghetti</a></li>
+            <li><a class="smoothie" href="./recipes/berry-peanut-butter-smoothie.html">Berry Peanut Butter Smoothie</a></li>
+            <li><a class="oatmeal" href="./recipes/chocolatey-oatmeal.html">Chocolatey Oatmeal</a></li>
         </ul>
     </body>
 </html>
