--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     </head>
     <body>
         <h1 class="home-page">Odin Recipes</h1>
-        <ul>
-            <li><a class="spaghetti" href="./recipes/buttery-spaghetti.html">Buttery Spaghetti</a></li>
-            <li><a class="smoothie" href="./recipes/berry-peanut-butter-smoothie.html">Berry Peanut Butter Smoothie</a></li>
-            <li><a class="oatmeal" href="./recipes/chocolatey-oatmeal.html">Chocolatey Oatmeal</a></li>
-        </ul>
+        <a class="spaghetti" href="./recipes/buttery-spaghetti.html">Buttery Spaghetti</a>
+        <a class="smoothie" href="./recipes/berry-peanut-butter-smoothie.html">Berry Peanut Butter Smoothie</a>
+        <a class="oatmeal" href="./recipes/chocolatey-oatmeal.html">Chocolatey Oatmeal</a>
     </body>
 </html>
